--- a/README.rdoc
+++ b/README.rdoc
@@ -1,23 +1,80 @@
-== Welcome to Gradesheet
+= Gradesheet
+== Introduction
 GradeSheet has been designed to give teachers all the tools 
 they need to record student grades.  It is web based to make 
 it easily accessible to everyone.  Students and parents can 
 log into the system to check on their grades and even 
 communicate with their teacher(s).
 
+== Helpful links
+* <b>Documentation:</b>
+* <b>Repository:</b> http://github.com/rnhurt/gradesheet
+* <b>Live example:</b> http://demo.KangarooBox.com
+* <b>Bugs / feature suggestions:</b> http://github.com/rnhurt/gradesheet/issues
+* <b>Professional support:</b> http://www.KangarooBox.com/kookaburra
+
+== Requirements
+* Ruby 1.8 (working on moving to v1.9)
+* Rails 2.1.0 (working on moving to 2.2.x
+* Dependencies (aka Rails plugins):
+* will_paginate
+* authlogic
+* validates_existence
+* livepipe_ui
+
+== Development Philosophy
+
 == Installation
-On Linux (Debian Lenny/Ubuntu)
- 1) Clone this repository
- 2) Add these dependecies:
-  * will_paginate
-  * ruby1.8
-  * rails2.x
- 3) Modify 'database.yml' to point to your database
- 4) run 'rake db:migrate' to create the database schema
- 5) run 'rake fixtures:load' to load in the test data
+Since this is a Ruby on Rails project, it is installed just like any other RoR
+project.  Since most of the development/testing is done on Debian & Ubuntu, it 
+will be simpler to get up and running if you are using one of those OSs.  However,
+it should run on any system that runs Rails.
 
-On Macintosh
- 1) ???
+1. Get the source code (http://github.com/rnhurt/gradesheet/tree/master)
+2. Add these dependencies noted above
+3. Modify +database.yml+ to point to your database
+4. run ++rake db:migrate++ to create the database schema
+5. run 'rake fixtures:load' to load the test data
+6. run "./script/server" to start the development web server
+7. Fire up your web browser and point it to http://localhost:3000[http://localhost:3000]
 
-On Windows
- 1) ???
+== Building Documentation
+Gradesheet is documented using the standard, built-in RDoc system.  To build 
+the documentation with the just run the command:
+  rake doc::app
+However, to build better looking documentation you might want to use this command: 
+  rake doc::app_horo
+which uses the Horo template and results in documentation that is much easier 
+on the eyes.
+
+== Testing
+Currently, Gradesheet tests are written using the standard, built-in test framework.
+However, RSpec looks very attractive and when I get a bit more time I might move
+them over to that.  In the meantime, just use the standard Rails testing commands
+to run the test (<code>rails test:units</code>, etc.).
+
+== Author Information
+Author:: 		Richard Hurt
+Copyright:: Copyright (c) 2008-2009 KangarooBox, LLC
+License::		GPL-2
+
+== License (GPL-2)
+This program is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
+== Professional Support & Maintenance
+If your interested in using Gradesheet in your school but need professional support,
+consider using a KangarooBox[http://www.KangarooBox.com] server appliance.  These
+make using Gradesheet a snap and you get professional help with any problem
+you might encounter.
