--- a/README.rdoc
+++ b/README.rdoc
@@ -37,9 +37,9 @@ it should run on any system that runs Rails.
 == Building Documentation
 Gradesheet is documented using the standard, built-in RDoc system.  To build 
 the documentation with the just run the command:
-  rake doc::app
+  rake doc:app
 However, to build better looking documentation you might want to use this command: 
-  rake doc::app_horo
+  rake doc:app_horo
 which uses the Horo template and results in documentation that is much easier 
 on the eyes.
 
@@ -49,28 +49,13 @@ However, RSpec looks very attractive and when I get a bit more time I might move
 them over to that.  In the meantime, just use the standard Rails testing commands
 to run the test (<tt>rails test:units</tt>, etc.).
 
-== Author Information
+== Professional Support & Maintenance
+If your interested in using Gradesheet in your school but don't want to install
+and maintain it yourself, consider using a KangarooBox[http://www.KangarooBox.com] 
+server appliance running Kookaburra[http://www.KangarooBox.com/kookaburra] 
+(the commercial version of Gradesheet).  
+
+== Legal Information
 Author:: 		Richard Hurt
 Copyright:: Copyright (c) 2008-2009 KangarooBox, LLC
-License::		GPL-2
-
-== License (GPL-2)
-This program is free software; you can redistribute it and/or
-modify it under the terms of the GNU General Public License
-as published by the Free Software Foundation; either version 2
-of the License, or (at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program; if not, write to the Free Software
-Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-
-== Professional Support & Maintenance
-If your interested in using Gradesheet in your school but need professional support,
-consider using a KangarooBox[http://www.KangarooBox.com] server appliance.  These
-make using Gradesheet a snap and you get professional help with any problem
-you might encounter.
+License::		GPL-2.  See LICENSE file in this directory.
