Updated the README a bit to include the latest changes to the project.

--- a/README.rdoc
+++ b/README.rdoc
@@ -13,15 +13,19 @@ communicate with their teacher(s).
 
 == Requirements
 * Ruby 1.8 (working on moving to v1.9)
-* Rails 2.1.0 (working on moving to 2.2.x
+* Rails 2.2.2
 * Dependencies (aka Rails plugins):
 * will_paginate[http://github.com/mislav/will_paginate] - Most awesome pagination system for Ruby
 * Authlogic[http://github.com/binarylogic/authlogic] - A clean, simple, and unobtrusive ruby authentication solution.
 * validates_existence[http://github.com/joshsusser/validates_existence] - Rails plugin that provides a validates_existence_of method for ActiveRecord models to check existence of records referenced by belongs_to associations.
+* validates_date_time[http://svn.viney.net.nz/things/rails/plugins/validates_date_time/] - Rails plugin that provides an easy way to validate dates and times
 * livepipe_ui[http://livepipe.net/] -  A suite of high quality widgets and controls for web 2.0 applications built using the Prototype JavaScript Framework.
+* Prawn[http://prawn.majesticseacreature.com/] - PDF framework for report generation
+* Prawn-Layout[http://github.com/sandal/prawn-layout/tree/master/] - An extension to Prawn offering table support, grid layouts and other things.
+* Prawn-Format[http://github.com/jamis/prawn-format/tree/master] - An extension to the Prawn PDF generation library that allows you to use HTML-ish tags
 
 == Installation
-Since this is a Ruby on Rails project, it is installed just like any other RoR
+This is a typical Ruby on Rails project and it is installed just like any other RoR
 project.  Since most of the development/testing is done on Debian & Ubuntu, it 
 will be simpler to get up and running if you are using one of those OSs.  However,
 it should run on any system that runs Rails.
@@ -47,7 +51,12 @@ on the eyes.
 Currently, Gradesheet tests are written using the standard, built-in test framework.
 However, RSpec looks very attractive and when I get a bit more time I might move
 them over to that.  In the meantime, just use the standard Rails testing commands
-to run the test (<tt>rails test:units</tt>, etc.).
+to run the test (<tt>rails test:units</tt>, etc.)
+
+I've just been turned on to Webrat[http://gitrdoc.com/brynary/webrat/tree/master]
+and am very impressed with it and all of the integration tests (or the majority of them)
+will be soon converted to it.  So, if you want to run the full test suite, you'll
+have to install Webrat.
 
 == Professional Support & Maintenance
 If your interested in using Gradesheet in your school but don't want to install
