--- a/README.rdoc
+++ b/README.rdoc
@@ -13,16 +13,16 @@ communicate with their teacher(s).
 
 == Requirements
 * Ruby 1.8 (working on moving to v1.9)
-* Rails 2.2.3
+* Rails 2.3.5
 * Dependencies (aka Rails plugins):
-* will_paginate[http://github.com/mislav/will_paginate] - Most awesome pagination system for Ruby
-* Authlogic[http://github.com/binarylogic/authlogic] - A clean, simple, and unobtrusive ruby authentication solution.
-* validates_existence[http://github.com/joshsusser/validates_existence] - Rails plugin that provides a validates_existence_of method for ActiveRecord models to check existence of records referenced by belongs_to associations.
-* validates_date_time[http://svn.viney.net.nz/things/rails/plugins/validates_date_time/] - Rails plugin that provides an easy way to validate dates and times
-* livepipe_ui[http://livepipe.net/] -  A suite of high quality widgets and controls for web 2.0 applications built using the Prototype JavaScript Framework.
-* Prawn[http://prawn.majesticseacreature.com/] - PDF framework for report generation
-* Prawn-Layout[http://github.com/sandal/prawn-layout/tree/master/] - An extension to Prawn offering table support, grid layouts and other things.
-* Prawn-Format[http://github.com/jamis/prawn-format/tree/master] - An extension to the Prawn PDF generation library that allows you to use HTML-ish tags
+** will_paginate[http://github.com/mislav/will_paginate] - Most awesome pagination system for Ruby
+** Authlogic[http://github.com/binarylogic/authlogic] - A clean, simple, and unobtrusive ruby authentication solution.
+** validates_existence[http://github.com/joshsusser/validates_existence] - Rails plugin that provides a validates_existence_of method for ActiveRecord models to check existence of records referenced by belongs_to associations.
+** validates_date_time[http://svn.viney.net.nz/things/rails/plugins/validates_date_time/] - Rails plugin that provides an easy way to validate dates and times
+** livepipe_ui[http://livepipe.net/] -  A suite of high quality widgets and controls for web 2.0 applications built using the Prototype JavaScript Framework.
+** Prawn[http://prawn.majesticseacreature.com/] - PDF framework for report generation
+*** Prawn-Layout[http://github.com/sandal/prawn-layout/tree/master/] - An extension to Prawn offering table support, grid layouts and other things.
+*** Prawn-Format[http://github.com/jamis/prawn-format/tree/master] - An extension to the Prawn PDF generation library that allows you to use HTML-ish tags
 
 == Installation
 This is a typical Ruby on Rails project and it is installed just like any other RoR
@@ -56,7 +56,13 @@ to run the test (<tt>rails test:units</tt>, etc.)
 I've just been turned on to Webrat[http://gitrdoc.com/brynary/webrat/tree/master]
 and am very impressed with it and all of the integration tests (or the majority of them)
 will be soon converted to it.  So, if you want to run the full test suite, you'll
-have to install Webrat.
+have to install the Webrat gem.
+
+Performance testing is being implemented with the excellent JMeter package.  This project
+uses Authlogic for user authentication and I have had no end of trouble trying to get
+some performance numbers out of the system.  However, a little time spent with JMeter
+has gotten me a least a little way toward being able to measure the speed of the system.
+This is becoming ever more important as the design solidifies and the optimization begins.
 
 == Professional Support & Maintenance
 If your interested in using Gradesheet in your school but don't want to install
@@ -66,5 +72,5 @@ server appliance running Kookaburra[http://www.KangarooBox.com/kookaburra]
 
 == Legal Information
 Author:: Richard Hurt
-Copyright:: Copyright (c) 2008-2009 KangarooBox, LLC
+Copyright:: Copyright (c) 2008-2010 KangarooBox, LLC
 License:: GPL-2.  See LICENSE file in this directory.
